--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top"src="./image/IMG_0340.jpg" alt="Card image cap">
+                    <img class="card-img-top"src="./IMG_0340.jpg" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-text">スポーツ用品の自動販売機です。ボタンを押すとスライドして登場します。</p>
                             <div class="d-flex justify-content-between align-items-center">
