--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
                         </div>
                     </div>
                 </div>
+                                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top"src="/Users/okabekaito/Documents/page/スクリーンショット 2021-12-16 10.59.26.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">勉強のためReactでtodoリストを作りました。</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-info "><a href="https://okabekaito.github.io/csb-43633/">開く</a></button>
+                                    <button type="button" class="btn btn-sm btn-outline-info ml-2"><a href="https://github.com/okabekaito/ReactTodo.git">コード</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="d-flex justify-content-center">
                     <h2 class="mb-5">以下は学習サイトで学びながら作成したもので、デプロイしたものです。</h2>
                 </div>
