--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
                                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top"src="/Users/okabekaito/Documents/page/スクリーンショット 2021-12-16 10.59.26.png" alt="Card image cap">
+                    <img class="card-img-top"src="./IMG3.png" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-text">勉強のためReactでtodoリストを作りました。</p>
                             <div class="d-flex justify-content-between align-items-center">
