--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
                         </div>
                     </div>
                 </div>
+                               <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="./IMG4.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Udemy で React を学んだため、練習＆自分用アプリとしてバックエンドに Laravel、フロントエンドに React を使って SPA 化して開発しました。</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-info ml-2"><a href="https://github.com/okabekaito/MuscleTrainingApp.git">コード</a></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
                     <img class="card-img-top" src="./スクリーンショット 2021-12-12 14.30.55.png" alt="Card image cap">
