--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1 class="jumbotron-heading">制作物の紹介</h1>
-            <h5>初めまして、文京学院大学4年の岡部海斗です。専攻は経営学なのですが、今年の4月半ばにプログラミングに出会い、勉強するために後期から大学を休学しています。このサイトは今までに作成してきた成果物を紹介するページです。</h5>
+            <h5>初めまして、文京学院大学4年の岡部海斗です。専攻は経営学なのですが、2021年4月半ばにプログラミングに出会い、勉強するために後期から大学を休学しています。このサイトは今までに作成してきた成果物を紹介するページです。</h5>
         </div　class="jumbotron-heading">
     </section>
 
@@ -60,7 +60,8 @@
                     <div class="card mb-4 shadow-sm">
                     <img class="card-img-top" src="./IMG_0354.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text">学習した内容と時間を記録、スケジュールを管理するためのアプリケーションです。モチベーションを維持して勉強し、習慣化させることを目的として作りました。</p>
+                            <p class="card-text">学習した内容と時間を記録、スケジュールを管理するためのアプリケーションです。モチベーションを維持して勉強し、習慣化させることを目的として作りました。<br/>
+                            ※現在対応中なのですが、Safariだとレイアウトが崩れますのでChromからお願いします。</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-sm btn-outline-info"><a href="https://studymanegememtapp.herokuapp.com/">開く</a></button>
